--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "feather-icons-react": "^0.6.2",
+    "formik": "^2.4.5",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-18-image-lightbox": "^5.1.4",
